--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
             <!-- Class for the nav bar -->
             <div class="nav-box">
                 <ul>
-                    <li>Book Online</li>
-                    <li>About</li>
-                    <li>Contact</li>
+                    <a href="book-online.html" class="nav-buttons">
+                        <li>Book Online</li>
+                    </a>
+                    <a href="#" class="nav-buttons">
+                        <li>About</li>
+                    </a>
+                    <a href="#" class="nav-buttons">
+                        <li>Contact</li>
+                    </a>
                 </ul>
             </div>
         </header>
@@ -86,6 +92,31 @@
                         facilis!</p>
                 </a>
             </div>
+        </div>
+
+
+        <div class="testimonials">
+            <div class="tbox">
+                <p>"I would like to personally thank you for your outstanding product. You guys rock! It's all good. I
+                    can't say enough about Roar Cycles."</p>
+                <p>- Tammara I.</p>
+            </div>
+
+            <div class="tbox">
+                <p>"Roar Cycles is the most valuable business resource we have EVER purchased. I will let my mum know
+                    about this, she could really make use of Roar Cycles! Roar Cycles has completely surpassed our
+                    expectations."</p>
+                <p>- Floris V.</p>
+            </div>
+
+            <div class="tbox">
+                <p>"I'm good to go. Roar Cycles is both attractive and highly adaptable. I will refer everyone I know."</p>
+                <p>- Carlin B.</p>
+            </div>
+
+            <div class="tbox">
+                <p>"Roar Cycles impressed me on multiple levels. I would gladly pay over 600 dollars for Roar Cycles. We can't understand how we've been living without Roar Cycles."</p>
+                <p>- Eve V.</p>
         </div>
     </div>
 </body>
